--- a/server/static/index.html
+++ b/server/static/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>React App</title>
+  <title>Federation of Chinese Community Of Canberra INC, 堪培拉华联社</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/cwtexkai.css">
+  <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css">
+  
+
+  
 </head>
 <body>
   <div id="react-app"></div>
