--- a/server/static/index.html
+++ b/server/static/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/cwtexkai.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css">
+  <!-- <link rel="stylesheet" href="../../react-big-calendar/lib/css/react-big-calendar.css"> -->
+  <link rel="stylesheet" href="./css/react-big-calendar.css">
   
 
   
