--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Federation of Chinese Community Of Canberra INC, 堪培拉华联社</title>
+  <link rel="stylesheet" href="./css/react-big-calendar.css">  
+  <link rel="stylesheet" href="./css/dayz.css">  
+  <link rel="stylesheet" href="/css/calendarComponentStyle.css">
+  
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/cwtexkai.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css">
   <!-- <link rel="stylesheet" href="../../react-big-calendar/lib/css/react-big-calendar.css"> -->
-  <link rel="stylesheet" href="./css/react-big-calendar.css">
   
 
   
