last 2 right side sections, redux tests

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>Federation of Chinese Community Of Canberra INC, 堪培拉华联社</title>
   <link rel="stylesheet" href="./css/react-big-calendar.css">  
+  <link rel="stylesheet" href="./css/react-search.css">  
+  
   <link rel="stylesheet" href="./css/dayz.css">  
   <link rel="stylesheet" href="/css/calendarComponentStyle.css">
   
