--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="./css/dayz.css">  
   <link rel="stylesheet" href="/css/calendarComponentStyle.css">
   
-  <link rel="stylesheet" href="/css/style.css">
+  <!-- <link rel="stylesheet" href="/css/style.css"> -->
+  <link rel="stylesheet" href="/css/style_WBG.css">
+  
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/cwtexkai.css">
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css">
   <!-- <link rel="stylesheet" href="../../react-big-calendar/lib/css/react-big-calendar.css"> -->
