--- a/server/static/index.html
+++ b/server/static/index.html
@@ -2,26 +2,191 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
   <title>Federation of Chinese Community Of Canberra INC, 堪培拉华联社</title>
-  <link rel="stylesheet" href="./css/react-big-calendar.css">  
-  <link rel="stylesheet" href="./css/react-search.css">  
-  
-  <link rel="stylesheet" href="./css/dayz.css">  
-  <link rel="stylesheet" href="/css/calendarComponentStyle.css">
-  
-  <!-- <link rel="stylesheet" href="/css/style.css"> -->
-  <link rel="stylesheet" href="/css/style_WBG.css">
   
   <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/cwtexkai.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css">
-  <!-- <link rel="stylesheet" href="../../react-big-calendar/lib/css/react-big-calendar.css"> -->
+  <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansscsliced.css"> 
   
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="/css/navbar-top-fixed.css" rel="stylesheet">
 
+  <link href="/css/calendarComponentStyle.css" rel="stylesheet">
+  
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="/css/bootstrap.min.js"></script> 
+  <link href="/css/navbar-top-fixed.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet"> -->
+
+
+
+  <style>
+    /* #temp{
+      background: red;
+
+    }
+    #centerArea{
+      height: 90vh;
+      background: green;
+    }
+    #BottomFooter{
+      color: rgba(0, 191, 255, 1);
+      min-height: 10vh;
+      height: auto;
+      line-height: auto;
+      display:flex;
+      align-items: center;
+      font-weight: bold;
+    } */
+
+    /* #TopTitleHeader{
+      color: rgba(0, 191, 255, 1);
+      min-height: 15vh;
+      height: auto;
+      line-height: auto;
+      align-items: center;
+      font-weight: bold;
+    }
+    #menuBar{
+
+      background-color: yellow;
+      font-weight: bold;
+    }
+    #headerElement{
+      background-color: blueviolet;
+    }
+    #rightsidemenu{
+      background-color: blue;
+    }
+    #myNavbar{
+
+      font-weight: bold;
+    } */
+    /* html,body{
+      font-family: 'Noto Sans SC Sliced', sans-serif;
+      height: auto
+    } */
+    /* .container{
+    }
+
+
+    .headerelement{
+      width: 100%;
+      background-color: red;
+      height: auto;
+    } */
+    /* .navbar.navbar-inverse.navbar-fixed-top.container {
+
+    }
+    .navbar.navbar-inverse.navbar-fixed-bottom{
+      width: 90vw;
+      margin-left: 5vw;
+      margin-right: 5vw;
+
+      margin-bottom: 0;
+      border-radius: 0;
+    } */
+
+    /* .nav.navbar-nav.navbar-right{
+      margin-right: 0px;
+    }
+    .container-fluid.text-center{
+      background-color: red;
+      width: 90vw;
+      min-height: 90vh;
+      height: auto;
+      margin-left: 5vw;
+      margin-right: 5vw;
+    }
+    .nav.navbar-nav{
+
+    } */
+    /* .row.content {height: 450px}
+    
+    .sidenav {
+      padding-top: 20px;
+      background-color: #f1f1f1;
+      height: 100%;
+    }
+    
+    footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    } */
+
+    /* .centerAreaEventPhotos  */
+
+    .well{
+      border-width: 3px;
+      border-color: skyblue;
+      /* background-color: red; */
+    }
+    .centerAreaRightSearch .SBtn{
+      width: 100%;/*20vw*/
+      height: 5vh;/*30vh*/
+      /* background: yellowgreen; */
+    }
+
+    .centerAreaRightSearch .SBox{
+      width: 100%;/*20vw*/
+      height: 5vh;/*30vh*/
+      /* background: grey; */
+    }  
+
+    .centerAreaRightSearch{
+      margin-left: 0vw;
+      margin-right: 0vw;
+      margin-top: 0vw;
+      margin-bottom: 1vw;  
+      width: 100%;/*20vw*/
+      height: 10vh;/*30vh*/
+      /* background: blue; */
+      color: black;  
+    }  
+
+    .currenteventPhoto{
+      margin-left: 0vw;
+      margin-right: 0vw;
+      margin-top: 0vw;
+      margin-bottom: 0vw;  
+      width: 100%;
+      /*20vw*/
+      height: auto;
+    }
+    .nav.navbar-nav.navbar-right{
+      margin-right: 1vw;
+    }
+    @media screen and (max-width: 767px) {
+      .sidenav {
+        height: auto;
+        padding: 15px;
+      }
+      .row.content {height:auto;} 
+    }
+  </style>  
   
 </head>
 <body>
   <div id="react-app"></div>
 
   <script src="/js/app.js"></script>
+
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+   <!-- <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script> 
+  <script src="/css/bootstrap.min.js"></script>  -->
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <!-- <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
 </html>
